[package]
name = "db_logger"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Julio Merino <julio@meroh.net>"]
categories = ["debugging"]
keywords = ["database", "log"]
description = "A database-backed logger for use with the log crate"
repository = "https://github.com/jmmv/db_logger"
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
gethostname = "0.2"
log = "0.4"
rand = "0.8"
regex = "1"
time = "0.2.16"
tokio = "1"

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "runtime-async-std-rustls", "sqlite", "time"]

[dev-dependencies]
env_logger = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
