[package]
name = "db_logger"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Julio Merino <julio@meroh.net>"]
categories = ["debugging"]
keywords = ["database", "log"]
description = "A database-backed logger for use with the log crate"
repository = "https://github.com/jmmv/db_logger"
readme = "README.md"
edition = "2018"

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
gethostname = "0.2"
log = "0.4"
rand = "0.8"
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "time"] }
time = "0.2.16"
tokio = "1"

[dev-dependencies]
env_logger = "0.8"
regex = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
